--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -1,1 +1,87 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"00_TensorflowFundamentals.ipynb","provenance":[],"authorship_tag":"ABX9TyPFX/34Wt2Hd8JtJxWg2tiw"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","metadata":{"colab":{"base_uri":"https://localhost:8080/","height":250},"id":"8szA_j63Dohh","executionInfo":{"status":"error","timestamp":1623046003088,"user_tz":420,"elapsed":495,"user":{"displayName":"Prasann Agrawal","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14Gi75ZPJZ64M_4VMW5OGiemgijwDyCMx_1VnhS-zGg=s64","userId":"02146293020548063183"}},"outputId":"8767dc7d-7d2a-4a5b-dd29-0dbaa43d43d7"},"source":["Gggg"],"execution_count":1,"outputs":[{"output_type":"error","ename":"NameError","evalue":"ignored","traceback":["\u001b[0;31m---------------------------------------------------------------------------\u001b[0m","\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)","\u001b[0;32m<ipython-input-1-a694c73a635e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mGggg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m","\u001b[0;31mNameError\u001b[0m: name 'Gggg' is not defined"]}]},{"cell_type":"markdown","metadata":{"id":"mYMZKmenFKln"},"source":[""]},{"cell_type":"code","metadata":{"id":"4ZmtrEToFLH8"},"source":[""],"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "00_TensorflowFundamentals.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNVAGVJmxBHb5TsDyGXI9YB"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8szA_j63Dohh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FsEBZgv3HQ_G"
+      },
+      "source": [
+        "In this notebook, we are going to cover some of the most fundamental concepts of tensors using TensorFlow\n",
+        "\n",
+        "More specifically we're going to cover :\n",
+        "\n",
+        "\n",
+        "> Indented block\n",
+        "*    Introduction to tensors\n",
+        "* Getting informations from tensors\n",
+        "* Manipulating tensors\n",
+        "* Tensors and NumPy\n",
+        "*Using @tf.function(a way to speed up your regular Python functons)\n",
+        "*Using GPUs with TensorFlow(or TPUs)\n",
+        "*Exercises to your self!\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tF593hzKHPMx"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mYMZKmenFKln"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4ZmtrEToFLH8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
