--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNVAGVJmxBHb5TsDyGXI9YB"
+      "authorship_tag": "ABX9TyP7f1ndpqoHQJTP8NzmC9LK"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,8 +24,17 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WGotGUQUHZPj"
+      },
+      "source": [
+        "Test"
+      ]
     },
     {
       "cell_type": "markdown",
