--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMjLRMGMyUaalfl/icwnHVH"
+      "authorship_tag": "ABX9TyOjlkvCjsc6CpEFu/B9HjFt"
     },
     "kernelspec": {
       "name": "python3",
@@ -33,7 +33,16 @@
         "id": "WGotGUQUHZPj"
       },
       "source": [
-        "**Test 111"
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rt5QKrXYiWTi"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -42,13 +51,13 @@
         "id": "FsEBZgv3HQ_G"
       },
       "source": [
-        "In this notebook, we are going to cover some of the most fundamental concepts of tensors using TensorFlow\n",
+        "# In this notebook, we are going to cover some of the most fundamental concepts of tensors using TensorFlow\n",
         "\n",
         "More specifically we're going to cover :\n",
         "\n",
         "\n",
         "> Indented block\n",
-        "*    Introduction to tensors\n",
+        "* Introduction to tensors\n",
         "* Getting informations from tensors\n",
         "* Manipulating tensors\n",
         "* Tensors and NumPy\n",
@@ -66,31 +75,45 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tF593hzKHPMx"
+        "id": "4ZmtrEToFLH8"
       },
       "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mYMZKmenFKln"
-      },
-      "source": [
-        ""
+        "## Introduction to Tensors"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4ZmtrEToFLH8"
+        "id": "6UBTpZ4TilNQ",
+        "outputId": "f7ce8678-f375-48e8-be55-5a16dd53650d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Import TensorFlow\n",
+        "import tensorflow as tf\n",
+        "print(tf.__version__)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.5.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UqANXdbZi2zm"
       },
       "source": [
         ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ]
 }
