--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjlkvCjsc6CpEFu/B9HjFt"
+      "authorship_tag": "ABX9TyMaNzIg8qgUUoEtZy0TFRHx"
     },
     "kernelspec": {
       "name": "python3",
@@ -84,11 +84,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6UBTpZ4TilNQ",
-        "outputId": "f7ce8678-f375-48e8-be55-5a16dd53650d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6UBTpZ4TilNQ",
+        "outputId": "f7ce8678-f375-48e8-be55-5a16dd53650d"
       },
       "source": [
         "#Import TensorFlow\n",
@@ -107,12 +107,119 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "UqANXdbZi2zm"
+        "id": "21SeinibmNat",
+        "outputId": "b073e3c5-df4f-4da8-e41b-d3b8c4663e76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "#Create tensors with tf.constant()\n",
+        "scalar = tf.constant(7)\n",
+        "scalar"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=7>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PGRNBzwbwCrh",
+        "outputId": "b4b8c232-6649-470b-cb3a-f8040fc3480b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Check the number of dimensions of a tensor(ndim stands for number of dimensions)\n",
+        "scalar.ndim"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vGIf0pt7wST3",
+        "outputId": "c8729c31-174a-4b43-dc53-e3a618124e3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "vector = tf.constant([10, 10])\n",
+        "vector"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([10, 10], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PqJ_R7KewbPA",
+        "outputId": "df9a32e4-1087-428a-fd6f-a01db70e9eac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "vector.ndim"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
       ]
     }
   ]
