--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMaNzIg8qgUUoEtZy0TFRHx"
+      "authorship_tag": "ABX9TyMakMUDdr3cmOXJ0OY5oEcZ"
     },
     "kernelspec": {
       "name": "python3",
@@ -109,11 +109,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "21SeinibmNat",
-        "outputId": "b073e3c5-df4f-4da8-e41b-d3b8c4663e76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "21SeinibmNat",
+        "outputId": "b073e3c5-df4f-4da8-e41b-d3b8c4663e76"
       },
       "source": [
         "#Create tensors with tf.constant()\n",
@@ -139,11 +139,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PGRNBzwbwCrh",
-        "outputId": "b4b8c232-6649-470b-cb3a-f8040fc3480b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PGRNBzwbwCrh",
+        "outputId": "b4b8c232-6649-470b-cb3a-f8040fc3480b"
       },
       "source": [
         "#Check the number of dimensions of a tensor(ndim stands for number of dimensions)\n",
@@ -168,11 +168,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vGIf0pt7wST3",
-        "outputId": "c8729c31-174a-4b43-dc53-e3a618124e3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vGIf0pt7wST3",
+        "outputId": "c8729c31-174a-4b43-dc53-e3a618124e3d"
       },
       "source": [
         "vector = tf.constant([10, 10])\n",
@@ -197,11 +197,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PqJ_R7KewbPA",
-        "outputId": "df9a32e4-1087-428a-fd6f-a01db70e9eac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PqJ_R7KewbPA",
+        "outputId": "df9a32e4-1087-428a-fd6f-a01db70e9eac"
       },
       "source": [
         "vector.ndim"
@@ -219,6 +219,132 @@
             "tags": []
           },
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4HV0P130wtly",
+        "outputId": "ba88024e-304e-466b-d1d4-00ab38d3b60a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a matrix (has more than 1 dimensions)\n",
+        "matrix = tf.constant([[10, 7],\n",
+        "                      [7, 10]])\n",
+        "matrix"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[10,  7],\n",
+              "       [ 7, 10]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YPeMxAsaxD7t",
+        "outputId": "b57d0758-bc48-4d31-acdb-c7be508759d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check dimensions of a matrix\n",
+        "matrix.ndim"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bcVVxtYexRS6",
+        "outputId": "4ec2a382-1a01-4de0-a90e-8fa3fd3db1bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Create another matrix\n",
+        "another_matrix = tf.constant([[10., 7.],\n",
+        "                              [3., 2.],\n",
+        "                              [8., 9.]], dtype = tf.float16) # specify the data type with dtype parameter\n",
+        "another_matrix"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=float16, numpy=\n",
+              "array([[10.,  7.],\n",
+              "       [ 3.,  2.],\n",
+              "       [ 8.,  9.]], dtype=float16)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TFQXJyN6xqhz",
+        "outputId": "09679b89-17df-483c-a505-9dad8a903d15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Check dimensions of another matrix\n",
+        "another_matrix.ndim"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     }
