--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMakMUDdr3cmOXJ0OY5oEcZ"
+      "authorship_tag": "ABX9TyPCTkKp/7PR6DJsF85U024a"
     },
     "kernelspec": {
       "name": "python3",
@@ -225,11 +225,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4HV0P130wtly",
-        "outputId": "ba88024e-304e-466b-d1d4-00ab38d3b60a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4HV0P130wtly",
+        "outputId": "ba88024e-304e-466b-d1d4-00ab38d3b60a"
       },
       "source": [
         "# Create a matrix (has more than 1 dimensions)\n",
@@ -258,11 +258,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YPeMxAsaxD7t",
-        "outputId": "b57d0758-bc48-4d31-acdb-c7be508759d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YPeMxAsaxD7t",
+        "outputId": "b57d0758-bc48-4d31-acdb-c7be508759d5"
       },
       "source": [
         "# Check dimensions of a matrix\n",
@@ -287,11 +287,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bcVVxtYexRS6",
-        "outputId": "4ec2a382-1a01-4de0-a90e-8fa3fd3db1bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bcVVxtYexRS6",
+        "outputId": "4ec2a382-1a01-4de0-a90e-8fa3fd3db1bf"
       },
       "source": [
         "#Create another matrix\n",
@@ -322,11 +322,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TFQXJyN6xqhz",
-        "outputId": "09679b89-17df-483c-a505-9dad8a903d15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TFQXJyN6xqhz",
+        "outputId": "09679b89-17df-483c-a505-9dad8a903d15"
       },
       "source": [
         "#Check dimensions of another matrix\n",
@@ -346,6 +346,108 @@
           },
           "execution_count": 13
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "116jCDcd-1dY",
+        "outputId": "cbad0bf1-b69d-4a51-9604-c886941d16be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Let's create a tensor\n",
+        "\n",
+        "tensor = tf.constant([[[1, 2, 3],\n",
+        "                       [4, 5, 6]],\n",
+        "                       [[7, 8, 9],\n",
+        "                       [10, 11, 12]],\n",
+        "                       [[13, 14, 15],\n",
+        "                       [16, 17, 18]],\n",
+        "                       [[19, 20, 21],\n",
+        "                       [22, 23, 24]] ])\n",
+        "tensor"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4, 2, 3), dtype=int32, numpy=\n",
+              "array([[[ 1,  2,  3],\n",
+              "        [ 4,  5,  6]],\n",
+              "\n",
+              "       [[ 7,  8,  9],\n",
+              "        [10, 11, 12]],\n",
+              "\n",
+              "       [[13, 14, 15],\n",
+              "        [16, 17, 18]],\n",
+              "\n",
+              "       [[19, 20, 21],\n",
+              "        [22, 23, 24]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T35AsD_7ALwz",
+        "outputId": "114a7c6e-3c84-4785-f835-575af1429a72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tensor.ndim"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Wf1x3B5Bnfz"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "heIgH-qdA8Py"
+      },
+      "source": [
+        "What we've created so far :\n",
+        "\n",
+        "* Scalar : a single number\n",
+        "* Vector : a number with direction (eg. wind speed and direction)\n",
+        "* Matrix : a 2-dimensional array of numbers\n",
+        "* Tensor : an n-dimensional array of numbers (where n can be any number, a 0-dimensional tensor is a scalar, a 1-dimensional is vector, )"
       ]
     }
   ]
