--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCTkKp/7PR6DJsF85U024a"
+      "authorship_tag": "ABX9TyPzlkSgVcSsuvucOEkWArZT"
     },
     "kernelspec": {
       "name": "python3",
@@ -351,11 +351,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "116jCDcd-1dY",
-        "outputId": "cbad0bf1-b69d-4a51-9604-c886941d16be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "116jCDcd-1dY",
+        "outputId": "cbad0bf1-b69d-4a51-9604-c886941d16be"
       },
       "source": [
         "#Let's create a tensor\n",
@@ -400,11 +400,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T35AsD_7ALwz",
-        "outputId": "114a7c6e-3c84-4785-f835-575af1429a72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T35AsD_7ALwz",
+        "outputId": "114a7c6e-3c84-4785-f835-575af1429a72"
       },
       "source": [
         "tensor.ndim"
@@ -449,6 +449,147 @@
         "* Matrix : a 2-dimensional array of numbers\n",
         "* Tensor : an n-dimensional array of numbers (where n can be any number, a 0-dimensional tensor is a scalar, a 1-dimensional is vector, )"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3AhySdDRD99S"
+      },
+      "source": [
+        "### Create tensors with tf.Variable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFcVeWRxERuc",
+        "outputId": "f2bffa2d-6db8-4a91-eaa5-5c721b985fa8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create the same tensor with tf.Variable() as above\n",
+        "changeable_tensor = tf.Variable([10, 7])\n",
+        "unchangeable_tensor = tf.constant([10, 7])\n",
+        "changeable_tensor, unchangeable_tensor"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([10,  7], dtype=int32)>,\n",
+              " <tf.Tensor: shape=(2,), dtype=int32, numpy=array([10,  7], dtype=int32)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "10L3oFkMFj7C",
+        "outputId": "d987b6ee-d97b-4e64-8d57-2278abf8c528",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        }
+      },
+      "source": [
+        "# Let's try change one of the elements in our changeable tensor\n",
+        "\n",
+        "changeable_tensor[0] = 7\n"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-5d0349850b18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's try change one of the elements in our changeable tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'ResourceVariable' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lhVewLsVGFhG",
+        "outputId": "673a1e5a-0fcd-438d-bdf4-47121c03043f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How about we try .assign()\n",
+        "changeable_tensor[0].assign(7)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Variable 'UnreadVariable' shape=(2,) dtype=int32, numpy=array([7, 7], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jPZT5oRHGUKA",
+        "outputId": "c41f91d2-1101-41de-ecf6-440d7e8b0a52",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        }
+      },
+      "source": [
+        "#Let's try change our unchangeable tensor\n",
+        "unchangeable_tensor[0].assign(7)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-59412554cc15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Let's try change our unchangeable tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0munchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    399\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnp_config\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    400\u001b[0m         np_config.enable_numpy_behavior()\"\"\".format(type(self).__name__, name))\n\u001b[0;32m--> 401\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    402\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    403\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute 'assign'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "suddIgRfGu3-"
+      },
+      "source": [
+        "#Creating random tensors"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
