16. Creating random tensor with tensorflow

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzlkSgVcSsuvucOEkWArZT"
+      "authorship_tag": "ABX9TyOp248+bvqApVjfBPXFo7hb"
     },
     "kernelspec": {
       "name": "python3",
@@ -581,12 +581,70 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "suddIgRfGu3-"
+        "id": "-vJqHoYCN9k1"
       },
       "source": [
-        "#Creating random tensors"
+        "### Creating random tensors\n",
+        "\n",
+        "Random tensors are tensors of some arbitary size which contain random numbers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "86orzPmGODD9",
+        "outputId": "1fd201de-d4a8-442d-8e66-dc060296b69c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create 2 random (but the same)  tensors\n",
+        "random_1 = tf.random.Generator.from_seed(7) #set seed for reproducibility\n",
+        "random_1 = random_1.normal(shape=(3, 2))\n",
+        "\n",
+        "random_2 = tf.random.Generator.from_seed(7)\n",
+        "random_2 = random_2.normal(shape=(3, 2))\n",
+        "\n",
+        "#Are they equal?\n",
+        "random_1, random_2 , random_1 == random_2"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+              " array([[-1.3240396 ,  0.28785667],\n",
+              "        [-0.8757901 , -0.08857018],\n",
+              "        [ 0.69211644,  0.84215707]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+              " array([[-1.3240396 ,  0.28785667],\n",
+              "        [-0.8757901 , -0.08857018],\n",
+              "        [ 0.69211644,  0.84215707]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 2), dtype=bool, numpy=\n",
+              " array([[ True,  True],\n",
+              "        [ True,  True],\n",
+              "        [ True,  True]])>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_ZgYYYPGR6qv"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
