--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOp248+bvqApVjfBPXFo7hb"
+      "authorship_tag": "ABX9TyM7aimcL6TE7Anrd+DJTswa"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,7 +24,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -88,14 +88,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6UBTpZ4TilNQ",
-        "outputId": "f7ce8678-f375-48e8-be55-5a16dd53650d"
+        "outputId": "f47969c3-8e40-4886-b83f-f765f79f3419"
       },
       "source": [
         "#Import TensorFlow\n",
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,14 +113,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "21SeinibmNat",
-        "outputId": "b073e3c5-df4f-4da8-e41b-d3b8c4663e76"
+        "outputId": "97471db1-f13d-44cb-f5cf-8de779f7de88"
       },
       "source": [
         "#Create tensors with tf.constant()\n",
         "scalar = tf.constant(7)\n",
         "scalar"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 18
         }
       ]
     },
@@ -143,13 +143,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PGRNBzwbwCrh",
-        "outputId": "b4b8c232-6649-470b-cb3a-f8040fc3480b"
+        "outputId": "1bd62920-d168-435a-b6f2-3713736fd62a"
       },
       "source": [
         "#Check the number of dimensions of a tensor(ndim stands for number of dimensions)\n",
         "scalar.ndim"
       ],
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +161,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 19
         }
       ]
     },
@@ -172,13 +172,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vGIf0pt7wST3",
-        "outputId": "c8729c31-174a-4b43-dc53-e3a618124e3d"
+        "outputId": "06a0ef7d-8c38-4e58-efae-2694947fb9bd"
       },
       "source": [
         "vector = tf.constant([10, 10])\n",
         "vector"
       ],
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 20
         }
       ]
     },
@@ -201,12 +201,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqJ_R7KewbPA",
-        "outputId": "df9a32e4-1087-428a-fd6f-a01db70e9eac"
+        "outputId": "fadf4dda-6ee3-40c1-eeea-5937e31c3d62"
       },
       "source": [
         "vector.ndim"
       ],
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +218,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 21
         }
       ]
     },
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4HV0P130wtly",
-        "outputId": "ba88024e-304e-466b-d1d4-00ab38d3b60a"
+        "outputId": "60689661-d2dd-47de-bf44-12abf1757030"
       },
       "source": [
         "# Create a matrix (has more than 1 dimensions)\n",
@@ -237,7 +237,7 @@
         "                      [7, 10]])\n",
         "matrix"
       ],
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +251,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 22
         }
       ]
     },
@@ -262,13 +262,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPeMxAsaxD7t",
-        "outputId": "b57d0758-bc48-4d31-acdb-c7be508759d5"
+        "outputId": "9b92087b-a155-423a-c84f-1353d3c95358"
       },
       "source": [
         "# Check dimensions of a matrix\n",
         "matrix.ndim"
       ],
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 23
         }
       ]
     },
@@ -291,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bcVVxtYexRS6",
-        "outputId": "4ec2a382-1a01-4de0-a90e-8fa3fd3db1bf"
+        "outputId": "be990594-7109-4f77-d1bf-6e7fcaf94add"
       },
       "source": [
         "#Create another matrix\n",
@@ -300,7 +300,7 @@
         "                              [8., 9.]], dtype = tf.float16) # specify the data type with dtype parameter\n",
         "another_matrix"
       ],
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 24
         }
       ]
     },
@@ -326,13 +326,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TFQXJyN6xqhz",
-        "outputId": "09679b89-17df-483c-a505-9dad8a903d15"
+        "outputId": "c8fcc7ad-7aea-4a77-e23b-b5e40efb1adb"
       },
       "source": [
         "#Check dimensions of another matrix\n",
         "another_matrix.ndim"
       ],
-      "execution_count": 13,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -344,7 +344,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 25
         }
       ]
     },
@@ -355,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "116jCDcd-1dY",
-        "outputId": "cbad0bf1-b69d-4a51-9604-c886941d16be"
+        "outputId": "54f101f5-5795-4f5c-e33f-30368ee412d3"
       },
       "source": [
         "#Let's create a tensor\n",
@@ -370,7 +370,7 @@
         "                       [22, 23, 24]] ])\n",
         "tensor"
       ],
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 26
         }
       ]
     },
@@ -404,12 +404,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T35AsD_7ALwz",
-        "outputId": "114a7c6e-3c84-4785-f835-575af1429a72"
+        "outputId": "fea4e8c8-56b3-46c7-c49f-832193972477"
       },
       "source": [
         "tensor.ndim"
       ],
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 27
         }
       ]
     },
@@ -433,7 +433,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GFcVeWRxERuc",
-        "outputId": "f2bffa2d-6db8-4a91-eaa5-5c721b985fa8"
+        "outputId": "bec1cd34-a4e3-4d5b-8732-1557136a71f7"
       },
       "source": [
         "# Create the same tensor with tf.Variable() as above\n",
@@ -474,7 +474,7 @@
         "unchangeable_tensor = tf.constant([10, 7])\n",
         "changeable_tensor, unchangeable_tensor"
       ],
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 28
         }
       ]
     },
@@ -499,14 +499,14 @@
           "height": 197
         },
         "id": "10L3oFkMFj7C",
-        "outputId": "d987b6ee-d97b-4e64-8d57-2278abf8c528"
+        "outputId": "99778406-32c7-49cb-c4c8-5d696d1f80ba"
       },
       "source": [
         "# Let's try change one of the elements in our changeable tensor\n",
         "\n",
         "changeable_tensor[0] = 7\n"
       ],
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "error",
@@ -515,7 +515,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-5d0349850b18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's try change one of the elements in our changeable tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-29-5d0349850b18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's try change one of the elements in our changeable tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: 'ResourceVariable' object does not support item assignment"
           ]
         }
@@ -524,61 +524,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lhVewLsVGFhG",
-        "outputId": "673a1e5a-0fcd-438d-bdf4-47121c03043f"
+        "id": "lhVewLsVGFhG"
       },
       "source": [
         "# How about we try .assign()\n",
         "changeable_tensor[0].assign(7)"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Variable 'UnreadVariable' shape=(2,) dtype=int32, numpy=array([7, 7], dtype=int32)>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 299
-        },
-        "id": "jPZT5oRHGUKA",
-        "outputId": "c41f91d2-1101-41de-ecf6-440d7e8b0a52"
+        "id": "jPZT5oRHGUKA"
       },
       "source": [
         "#Let's try change our unchangeable tensor\n",
         "unchangeable_tensor[0].assign(7)"
       ],
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-25-59412554cc15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Let's try change our unchangeable tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0munchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    399\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnp_config\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    400\u001b[0m         np_config.enable_numpy_behavior()\"\"\".format(type(self).__name__, name))\n\u001b[0;32m--> 401\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    402\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    403\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute 'assign'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -594,11 +559,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "86orzPmGODD9",
-        "outputId": "1fd201de-d4a8-442d-8e66-dc060296b69c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "86orzPmGODD9",
+        "outputId": "1920d477-e389-457e-a9b3-dd81cda52a26"
       },
       "source": [
         "# Create 2 random (but the same)  tensors\n",
@@ -611,7 +576,7 @@
         "#Are they equal?\n",
         "random_1, random_2 , random_1 == random_2"
       ],
-      "execution_count": 32,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,20 +599,109 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 30
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pfvlSfSjUmQ1"
+      },
+      "source": [
+        "### Shuffle the order of elements in a tensor"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_ZgYYYPGR6qv"
+        "id": "aTJum8FJUpiq"
       },
       "source": [
-        ""
+        "# Shuffle a tensor( valuable for when you want to shuffle your data so the inherent order doesn't effect learning)\n",
+        "\n",
+        "not_shuffled = tf.constant([[10, 7],\n",
+        "                            [3, 4],\n",
+        "                            [2, 5]\n",
+        "                            ])\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yOjAUM0WWia1",
+        "outputId": "a7201713-5507-405b-9c47-4ec83818a7ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Shuffle our non-shuffled tensor\n",
+        "\n",
+        "tf.random.shuffle(not_shuffled) #operation level seed"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              "array([[ 2,  5],\n",
+              "       [ 3,  4],\n",
+              "       [10,  7]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rklbDuRGg2ey"
+      },
+      "source": [
+        "### ***Exercise*** Read through Tensorflow documentation on random seed generation :[https://www.tensorflow.org/api_docs/python/tf/random/set_seed](https://www.tensorflow.org/api_docs/python/tf/random/set_seed) and practice writing 5 random tensors and shuffle them"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QIX2_AemhUv5",
+        "outputId": "39200bae-c67c-4e46-df5a-c79d847cddfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#tf.random.set_seed(42)\n",
+        "tf.random.shuffle(not_shuffled, seed=21)"
+      ],
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              "array([[ 3,  4],\n",
+              "       [ 2,  5],\n",
+              "       [10,  7]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 116
+        }
+      ]
     }
   ]
 }
