--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7aimcL6TE7Anrd+DJTswa"
+      "authorship_tag": "ABX9TyONx0pfp4mYElYV41VQq7Ar"
     },
     "kernelspec": {
       "name": "python3",
@@ -632,11 +632,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yOjAUM0WWia1",
-        "outputId": "a7201713-5507-405b-9c47-4ec83818a7ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yOjAUM0WWia1",
+        "outputId": "a7201713-5507-405b-9c47-4ec83818a7ff"
       },
       "source": [
         "#Shuffle our non-shuffled tensor\n",
@@ -668,38 +668,166 @@
         "id": "rklbDuRGg2ey"
       },
       "source": [
-        "### ***Exercise*** Read through Tensorflow documentation on random seed generation :[https://www.tensorflow.org/api_docs/python/tf/random/set_seed](https://www.tensorflow.org/api_docs/python/tf/random/set_seed) and practice writing 5 random tensors and shuffle them"
+        "### ***Exercise*** Read through Tensorflow documentation on random seed generation :[https://www.tensorflow.org/api_docs/python/tf/random/set_seed](https://www.tensorflow.org/api_docs/python/tf/random/set_seed) and practice writing 5 random tensors and shuffle them\n",
+        "\n",
+        "It looks like if we want our shuffled tensors to be in the same order, we've got to use the global level random seed as well as the operation level random seed:\n",
+        "> Rule 4: \"If both the global and operation seed are set : Both seeds are used in conjuction to determine the random sequence\"."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QIX2_AemhUv5",
-        "outputId": "39200bae-c67c-4e46-df5a-c79d847cddfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QIX2_AemhUv5",
+        "outputId": "6e33033f-a996-4efe-d53c-e40b17a9bd32"
       },
       "source": [
-        "#tf.random.set_seed(42)\n",
-        "tf.random.shuffle(not_shuffled, seed=21)"
+        "tf.random.set_seed(42) #global level seed\n",
+        "tf.random.shuffle(not_shuffled, seed=42) #operation level random seed"
       ],
-      "execution_count": 116,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
-              "array([[ 3,  4],\n",
-              "       [ 2,  5],\n",
-              "       [10,  7]], dtype=int32)>"
+              "array([[10,  7],\n",
+              "       [ 3,  4],\n",
+              "       [ 2,  5]], dtype=int32)>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 116
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N0pyox6KQDp5"
+      },
+      "source": [
+        "### Other ways to make Tensors\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kxxYGhBIQKUe",
+        "outputId": "dca37363-7b96-4506-872a-16230220815c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a tensor of all ones\n",
+        "tf.ones([10, 7])"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10, 7), dtype=float32, numpy=\n",
+              "array([[1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1., 1., 1.]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2ZYAL-g1QffJ",
+        "outputId": "117aac1a-10f5-4ecb-f4af-ca16e7695cec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Create a tensor of all zeros\n",
+        "tf.zeros(shape=[3, 4])"
+      ],
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 4), dtype=float32, numpy=\n",
+              "array([[0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PnvYHqyrQzmT"
+      },
+      "source": [
+        "### Turn NumPy arrays into tensors\n",
+        "The main difference between Numpy arrays and Tensorflow tensors is that tensors can be run on a GPU ( much faster fo numerical computing)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g_0tne6kQtDS",
+        "outputId": "89829dd4-4c22-4c26-e26d-4ee9785a51ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# You can also turn NumPy array into tensors\n",
+        "import numpy as np\n",
+        "numpy_A = np.arange(1, 25, dtype=np.int32) # create a Numpy array between 1 and 25\n",
+        "numpy_A\n",
+        "\n",
+        "#X = tf.constant(some_matrix) #capital for matrix or tensor\n",
+        "#y = tf.constant(vector) #non-capital for vector"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "       18, 19, 20, 21, 22, 23, 24], dtype=int32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 144
         }
       ]
     }
